fix map height when Search is visible

--- a/src/bootstrap-gisp/less/gisp-theme/_maps.less
+++ b/src/bootstrap-gisp/less/gisp-theme/_maps.less
@@ -42,6 +42,26 @@
     }
 }
 
+.table-srchCoords {
+    padding-top: 4px;
+    td {
+        white-space: nowrap;
+        &:last-child {
+        padding-left: 15px;
+    }
+    }    
+    label {
+        font-size: 12px;
+    }
+    .form-control {
+        border: 1px solid #eee;
+        display: inline-block;
+        float: none;
+        height: 25px;
+        padding: 3px 6px;
+        width: auto;
+    }
+}
 
 /* Legend */
 
